--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <button class="button btn">-</button>
         </div>
     </div>
+    <footer>&copy Vikash - All Rights Reserved</footer>
     <script src="script.js"></script>
 </body>
 
