--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Calculate me! - A calculator made by me</title>
-    <link rel="shortcut icon" type="image/png" href="./favicon.png" />
+    <link rel="shortcut icon" type="image/png" href="favicon.png" />
     <link href="style.css" rel="stylesheet" type="text/css" />
     <link href="utils.css" rel="stylesheet" type="text/css" />
 </head>
@@ -47,7 +47,6 @@
             <button class="button btn">-</button>
         </div>
     </div>
-    
     <footer>&copy Vikash - All Rights Reserved</footer>
     <script src="script.js"></script>
 </body>
